--- a/index.html
+++ b/index.html
@@ -12,25 +12,26 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700;800;900&display=swap"
     rel="stylesheet">
+  <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+  <link rel="manifest" href="/site.webmanifest">
 </head>
 
 <body>
 
   <!-- Commencer la Navbar -->
 
-  <nav class="navbar navbar-expand-lg navbar-dark menu shadow fixed-top">
+  <nav class="navbar navbar-expand-lg navbar-dark menu shadow ">
     <div class="container">
-      <a class="navbar-brand" href="#">
-        <img src="images/Photo Officielle Rafael.png" style="width: 50px; height: 50px;" alt="logo">
-      </a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
         aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
-      <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
+      <div class="collapse navbar-collapse justify-content-between" id="navbarNav">
         <ul class="navbar-nav">
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="#">Accueil</a>
+            <a class="nav-link active" aria-current="page" href="#home">Accueil</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#services">Mes services</a>
@@ -41,7 +42,8 @@
           </li>
         </ul>
 
-        <button type="button" class="rounded-pill btn-rounded">+33 660788474
+        <button onclick="window.open('tel:0660788474')" type="button" class="rounded-pill btn-rounded">06 60 78 84 74
+
           <span>
             <i class="fas fa-phone-alt"></i>
           </span>
@@ -57,29 +59,35 @@
   <section id="home" class="intro-section">
     <div class="container">
       <div class="row align-item-center text-white">
-        <div class="col-md-8 intros">
+        <div class="col-md-6 intros">
+
           <h1 class="display-2">
             <span class="display-2--intro">Rafael Longeville</span>
-            <span class="display-2--description lh-base">Développeur avec le statut "Étudiant sans employeur", je recherche urgemment une entreprise
+            <span class="display-2--description lh-base">Développeur Informatique au CESI, je recherche activement une
+              entreprise
               innovante pour mon
-              alternance en deux ans.
+              alternance en deux ans, sous le rythme de 3 semaines en entreprise, une semaine en formation.
               <br>
               <br>
-              Ensemble, nous construirons votre site web et je vous
-              proposerais des services de maintenance informatique. <br><br>
+              Franco-Colombien, trilingue espagnol et anglais, j’ai réalisé la plus grande partie de ma scolarité au
+              lycée Français de Bogota.
+              <br>Je souhaite participer sur des projets Front-End en React.js pour agrandir mon savoir et mes
+              compétences professionnelles <br>
+              <br>
               Pour mon alternance, grâce au contexte sanitaire actuel, il n’y a aucun reste à charge pour les
               entreprises en ce qui concerne les frais de formation
             </span>
           </h1>
           <br>
           <a href="#services" style="text-decoration: none;">
-            <button type="button" class="rounded-pill btn-rounded ">Découvrir mes offres
+            <button type="button" class="rounded-pill btn-rounded ">Découvrir mes compétences
               <span>
                 <i class="fas fa-arrow-right"></i>
               </span>
             </button>
           </a>
         </div>
+        <img src="/images/photo-rafa.png" alt="rafa" style="width: 500px; height: 500px;">
         <div class="col-md-6 intros"></div>
       </div>
     </div>
@@ -90,83 +98,39 @@
     </svg>
   </section>
 
-  <!--Commencer la partie des logos entreprises-->
 
-  <section id="campanies" class="campanies">
-    <div class="container">
-      <div class="row text-center">
-        <h4 class="fw-bold lead mb-3">Ils m'ont fait confiance</h4>
-        <div class="heading-line mb-5"></div>
-      </div>
-    </div>
-
-    <!-- Commencer les entreprises-->
-
-    <div class="container">
-      <div class="row">
-        <div class="col-md-4 col-lg-2">
-          <div class="campanies__logo-box shadow-sm">
-            <img src="images/logos/campany-1.png" alt="Campany 1 logo" title="Campany 1 Logo" class="img-fluid">
-          </div>
-        </div>
-        <div class="col-md-4 col-lg-2">
-          <div class="campanies__logo-box shadow-sm">
-            <img src="images/logos/campany-2.png" alt="Campany 2 logo" title="Campany 2 Logo" class="img-fluid">
-          </div>
-        </div>
-        <div class="col-md-4 col-lg-2">
-          <div class="campanies__logo-box shadow-sm">
-            <img src="images/logos/campany-3.png" alt="Campany 3 logo" title="Campany 3 Logo" class="img-fluid">
-          </div>
-        </div>
-        <div class="col-md-4 col-lg-2">
-          <div class="campanies__logo-box shadow-sm">
-            <img src="images/logos/campany-4.png" alt="Campany 4 logo" title="Campany 4 Logo" class="img-fluid">
-          </div>
-        </div>
-        <div class="col-md-4 col-lg-2">
-          <div class="campanies__logo-box shadow-sm">
-            <img src="images/logos/campany-5.png" alt="Campany 5 logo" title="Campany 5 Logo" class="img-fluid">
-          </div>
-        </div>
-        <div class="col-md-4 col-lg-2">
-          <div class="campanies__logo-box shadow-sm">
-            <img src="images/logos/campany-6.png" alt="Campany 6 logo" title="Campany 6 Logo" class="img-fluid">
-          </div>
-        </div>
-      </div>
-    </div>
-  </section>
-
-  <!-- Commencer la section des services-->
+  <!-- Commencer la section des compétences-->
   <section id="services" class="services">
     <div class="container">
       <div class="row text-center">
-        <h1 class="display-3 fw-bold">Mes services</h1>
+        <h1 class="display-3 fw-bold">Mes compétences</h1>
         <div class="heading-line mb-1"></div>
       </div>
-
-
 
       <!--Commencer la description-->
 
       <div class="row pt-2 pb-2 mt-0 mb-3">
         <div class="col-md-6 border-right">
           <div class="bg-white p-3">
-            <h2 class="fw-bold  text-center">
-              Mes services vont du déploiement complet de votre site web Responsive jusqu'au nettoyage et à la
-              sécurisation de
-              votre ordinateur
+            <h2 class="fw-bold  text-justify">
+              J'ai des compétences solides en création de sites web avec des technologies front-end récentes (HTML &
+              CSS, Bootstrap 5, SASS)
             </h2>
           </div>
         </div>
         <div class="col-md-6">
           <div class="bg-white p-4 text-start">
             <p class="fw-light">
-              Je vous propose un service de qualité en distanciel, sans bugs ni complications, du site web responsive à
-              la maintenance de votre poste informatique.
-              Pouvoir améliorer le quotidien des particuliers en optimisant leur environnement numérique me tiens à
-              coeur.
+              - Tout au long de cette année, en freelance, j’ai réalisé des maintenances informatiques pour des
+              particuliers.
+            </p>
+            <p class="fw-light">
+              - Pendant les vacances scolaires 2020 , j’ai travaillé au sein d’OPTIMIS’ACTION, un cabinet fiscaliste
+              Nantais, pour le compte du quel je gérais une data-base sous format Excel.
+            </p>
+            <p class="fw-light">
+              - En 2021, j'ai travaillé au sein de la MGEN en tant qu'opérateur de saisie, je réalisais des liquidations
+              manuelles pour une aide auditive.
             </p>
           </div>
         </div>
@@ -184,14 +148,19 @@
             <div class="icon d-block fas fa-laptop"></div>
             <h3 class="display-3--title mt-1">Maintenance Informatique</h3>
             <p class="lh-lg">
-              À distance, je prendrais le contrôle de votre poste informatique puis j'installerais différents logiciels
+              En présentiel ou à distance, je prendrais le contrôle de votre poste informatique puis j'installerais
+              différents logiciels et extensions
               pour optimiser la vitesse de votre PC.<br> J'installerais également l'un des meilleurs Anti-Virus du
               marché
               pour que votre navigation sur le web se fasse en toute sécurité.
             </p>
-            <button onclick="window.location.href='/cv.html'" class="rounded-pill btn-rounded border-primary">Super, je veux sécuriser mon PC
-              <span><i class="fas fa-arrow-right"></i></span>
-            </button>
+
+            <a href="#card" style="text-decoration: none;">
+
+              <button href="#carde" class="rounded-pill btn-rounded border-primary">Super, je veux sécuriser mon PC
+                <span><i class="fas fa-arrow-right"></i></span>
+              </button>
+            </a>
           </div>
         </div>
         <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12 services mt-4 text-end">
@@ -215,11 +184,15 @@
               Ensemble, nous verrons quel type de site web correspond le mieux à votre buisiness, nous instaurerons des
               fonctionalités qui vous plaisent mais également des modalités de payement intuitives
             </p>
-            <button type="button" class="rounded-pill btn-rounded border-primary"> Génial, je souhaite améliorer ma
-              communication
-              sur le web
-              <span><i class="fas fa-arrow-right"></i></span>
-            </button>
+
+            <a href="#card" style="text-decoration: none;">
+              <button type="button" class="rounded-pill btn-rounded border-primary"> Génial, je souhaite améliorer ma
+                communication
+                sur le web
+                <span><i class="fas fa-arrow-right"></i></span>
+              </button>
+            </a>
+
           </div>
         </div>
       </div>
@@ -228,14 +201,18 @@
 
   <!-- Commencer les témoignages-->
   <section id="testimonials" class="testimonials">
-    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="#fff" fill-opacity="1" d="M0,96L48,128C96,160,192,224,288,213.3C384,203,480,117,576,117.3C672,117,768,203,864,202.7C960,203,1056,117,1152,117.3C1248,117,1344,203,1392,245.3L1440,288L1440,0L1392,0C1344,0,1248,0,1152,0C1056,0,960,0,864,0C768,0,672,0,576,0C480,0,384,0,288,0C192,0,96,0,48,0L0,0Z"></path></svg>
+    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
+      <path fill="#fff" fill-opacity="1"
+        d="M0,96L48,128C96,160,192,224,288,213.3C384,203,480,117,576,117.3C672,117,768,203,864,202.7C960,203,1056,117,1152,117.3C1248,117,1344,203,1392,245.3L1440,288L1440,0L1392,0C1344,0,1248,0,1152,0C1056,0,960,0,864,0C768,0,672,0,576,0C480,0,384,0,288,0C192,0,96,0,48,0L0,0Z">
+      </path>
+    </svg>
     <div class="container">
       <div class="row text-center text-white">
         <h1 class="display-3 fw-bold">Témoignages</h1>
         <hr style="width: 100px; height: 3px; " class="mx-auto">
         <p class="lead pt-1">Ce que mes collaborateurs disent sur moi</p>
       </div>
-  
+
       <!-- Carousel  -->
       <div class="row align-items-center">
         <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
@@ -249,13 +226,13 @@
                   Très bonne expérience aux côtés de Rafael, ce jeune homme est plein d'ambition et il a le goût du
                   travail
                   <i class="fas fa-quote-right"></i>
-                  <div class="ratings p-1">
-                    <i class="fas fa-star"></i>
-                    <i class="fas fa-star"></i>
-                    <i class="fas fa-star"></i>
-                    <i class="fas fa-star"></i>
-                    <i class="fas fa-star"></i>
-                  </div>
+                <div class="ratings p-1">
+                  <i class="fas fa-star"></i>
+                  <i class="fas fa-star"></i>
+                  <i class="fas fa-star"></i>
+                  <i class="fas fa-star"></i>
+                  <i class="fas fa-star"></i>
+                </div>
                 </p>
               </div>
               <!-- Photo du client  -->
@@ -267,7 +244,7 @@
                 <h3>Thomas Longeville</h3>
                 <p class="fw-light">Responsable Comercial chez Optimis'ACTION</p>
               </div>
-            </div>     
+            </div>
             <!-- CAROUSEL ITEM 2 -->
             <div class="carousel-item">
               <!-- Carte des témoignages  -->
@@ -278,13 +255,13 @@
                   il
                   sait être à l'écoute mais également à votre service
                   <i class="fas fa-quote-right"></i>
-                  <div class="ratings p-1">
-                    <i class="fas fa-star"></i>
-                    <i class="fas fa-star"></i>
-                    <i class="fas fa-star"></i>
-                    <i class="fas fa-star"></i>
-                    <i class="fas fa-star"></i>
-                  </div>
+                <div class="ratings p-1">
+                  <i class="fas fa-star"></i>
+                  <i class="fas fa-star"></i>
+                  <i class="fas fa-star"></i>
+                  <i class="fas fa-star"></i>
+                  <i class="fas fa-star"></i>
+                </div>
                 </p>
               </div>
               <!-- Photo du client  -->
@@ -296,7 +273,7 @@
                 <h3>William Debussier</h3>
                 <p class="fw-light">Directeur Associé chez OPTIMIS'ACTION</p>
               </div>
-            </div>     
+            </div>
             <!-- CAROUSEL ITEM 3 -->
             <div class="carousel-item">
               <!-- Carte des témoignages -->
@@ -306,13 +283,13 @@
                   Rafael est astucieux et appliqué, il sait mettre en œuvre toutes ses connaissances pour mener à bien
                   ses missions et projets.
                   <i class="fas fa-quote-right"></i>
-                  <div class="ratings p-1">
-                    <i class="fas fa-star"></i>
-                    <i class="fas fa-star"></i>
-                    <i class="fas fa-star"></i>
-                    <i class="fas fa-star"></i>
-                    <i class="fas fa-star"></i>
-                  </div>
+                <div class="ratings p-1">
+                  <i class="fas fa-star"></i>
+                  <i class="fas fa-star"></i>
+                  <i class="fas fa-star"></i>
+                  <i class="fas fa-star"></i>
+                  <i class="fas fa-star"></i>
+                </div>
                 </p>
               </div>
               <!-- Photo du client    -->
@@ -324,21 +301,53 @@
                 <h3>Paola Lynett</h3>
                 <p class="fw-light">Négociatrice en Immobilier </p>
               </div>
-            </div>          
+            </div>
           </div>
           <div class="text-center">
-            <button class="btn btn-outline-light fas fa-long-arrow-alt-left" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
-          </button>
-          <button class="btn btn-outline-light fas fa-long-arrow-alt-right" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
-          </button>
+            <button class="btn btn-outline-light fas fa-long-arrow-alt-left" type="button"
+              data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
+            </button>
+            <button class="btn btn-outline-light fas fa-long-arrow-alt-right" type="button"
+              data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
+            </button>
           </div>
         </div>
       </div>
     </div>
-    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="#fff" fill-opacity="1" d="M0,96L48,128C96,160,192,224,288,213.3C384,203,480,117,576,117.3C672,117,768,203,864,202.7C960,203,1056,117,1152,117.3C1248,117,1344,203,1392,245.3L1440,288L1440,320L1392,320C1344,320,1248,320,1152,320C1056,320,960,320,864,320C768,320,672,320,576,320C480,320,384,320,288,320C192,320,96,320,48,320L0,320Z"></path></svg>
+    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
+      <path fill="#fff" fill-opacity="1"
+        d="M0,96L48,128C96,160,192,224,288,213.3C384,203,480,117,576,117.3C672,117,768,203,864,202.7C960,203,1056,117,1152,117.3C1248,117,1344,203,1392,245.3L1440,288L1440,320L1392,320C1344,320,1248,320,1152,320C1056,320,960,320,864,320C768,320,672,320,576,320C480,320,384,320,288,320C192,320,96,320,48,320L0,320Z">
+      </path>
+    </svg>
   </section>
 
-  
+  <!--Commencer la carte pour le CV-->
+  <div class="carde" id="card">
+    <div class="carde row text-center mb-2" style="margin-left: 0;margin-right: 0;">
+      <h1 style="padding-left: 0;padding-right: 0;">Voici mon CV</h1>
+      <div class="heading-line mb-1" style="padding-left: 0;padding-right: 0;"></div>
+    </div>
+    <div class="carde__center">
+      <div class="card" style="width: 18rem;">
+        <img src="/images/CV Rafael Longeville_page-0001.jpg" class="card-img-top" alt="image cv">
+        <div class="card-body">
+          <h5 class="card-title">Mon CV</h5>
+          <p class="card-text">Regardez mes compétences et n'hésitez pas à m'ajouter sur <a
+              href="https://www.linkedin.com/in/rafael-longeville/" target="_blank">LinkedIn</a> pour un devis
+            personalisé</p>
+          <a href="/assets/CV Rafael Longeville.pdf" class="btn btn-primary" target="_blank">Visualisez mon CV en PDF
+          </a>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
+    <path fill="#1f178b" fill-opacity="1"
+      d="M0,288L48,272C96,256,192,224,288,197.3C384,171,480,149,576,165.3C672,181,768,235,864,250.7C960,267,1056,245,1152,250.7C1248,256,1344,288,1392,304L1440,320L1440,320L1392,320C1344,320,1248,320,1152,320C1056,320,960,320,864,320C768,320,672,320,576,320C480,320,384,320,288,320C192,320,96,320,48,320L0,320Z">
+    </path>
+  </svg>
+
 
   <!-- Commencer le  Footer-->
   <footer class="footer">
@@ -357,7 +366,7 @@
             </svg>
           </div>
           <div class="contact-box__info">
-            <a href="" class="contact-box__info--title">+33 660788474</a>
+            <a href="tel:06 60 78 84 74" class="contact-box__info--title">06 60 78 84 74</a>
             <p class="contact-box__info--subtitle">Lundi-Vendredi 9h-19h</p>
           </div>
         </div>
@@ -438,7 +447,7 @@
 
   <!-- Intégrer Bundle.Js-->
 
-  <script src="/node_modules/bootstrap/dist/js/bootstrap.bundle.js"></script>
+  <script src="/assets/bootstrap.bundle.js"></script>
 
 
 </body>
