--- a/index.html
+++ b/index.html
@@ -61,20 +61,20 @@
         <div class="col-md-6 intros">
           <h1 class="display-2">
             <span class="display-2--intro">Rafael Longeville</span>
-            <span class="display-2--description lh-base">Etudiant "Développeur Informatique" au CESI, je recherche
+            <span class="display-2--description lh-base">Etudiant "Développeur Informatique" au CESI.<br>Je recherche
               activement une
               entreprise
-              innovante pour mon
-              alternance en deux ans, sous le rythme de 3 semaines en entreprise, une semaine en formation.
+              innovante<br> afin de réaliser mon
+              alternance en deux ans,<br> sous le rythme de 3 semaines en entreprise, une semaine en formation.
               <br>
               <br>Je souhaite participer à des projets Front-End en React.js pour améliorer mes compétences sur ce
-              framework.
-              Trilingue espagnol et anglais, je suis passioné par le Web 3.0, en particulier par la programmation de
-              smart-contracts.
+              framework.<br>
+              Trilingue espagnol et anglais, je suis passioné par le Web 3.0, en particulier par l'univers de la
+              Blockchain <br>et des crypto-monnaies.
               <br>
               <br>
               Grâce aux dispositions fiscales actuelles, une aide de 8000 € est proposée à toute entreprise à l'embauche
-              d'un alternant
+              d'un alternant.
             </span>
           </h1>
           <br>
@@ -103,38 +103,47 @@
   <section id="services" class="services">
     <div class="container">
       <div class="row text-center">
-        <h1 class="display-3 fw-bold">Mes compétences</h1>
+        <h1 class="display-3 fw-bold">Mes compétences & Créations</h1>
         <div class="heading-line mb-1"></div>
       </div>
+      <br><br>
 
       <!--Commencer la description-->
 
-      <div class="row pt-2 pb-2 mt-0 mb-3">
-        <div class="col-md-6 border-right">
-          <div class="bg-white p-3">
-            <h2 class="fw-bold  text-justify">
-              J'ai des compétences solides en création de sites web avec des technologies front-end récentes (HTML &
-              CSS, Bootstrap 5, SASS)
-            </h2>
-          </div>
+      <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-dot"
+        viewBox="0 0 16 16" style="width: 50px;height: 50px;float: left;">
+        <path d="M8 9.5a1.5 1.5 0 1 0 0-3 1.5 1.5 0 0 0 0 3z" />
+      </svg>
+      <h2>Conception et intégration en auto-didacte d'un site web personnel</h2><br><br>
+      <div class="grid">
+        <div>
+          <img src="./images/preview-rafa.png" alt="rafa" style="height: 300px;width: 600px;">
         </div>
-        <div class="col-md-6">
-          <div class="bg-white p-4 text-start">
-            <p class="fw-light">
-              - Tout au long de cette année, en freelance, j’ai réalisé des maintenances informatiques pour des
-              particuliers.
-            </p>
-            <p class="fw-light">
-              - Pendant les vacances scolaires 2020 , j’ai travaillé au sein d’OPTIMIS’ACTION, un cabinet fiscaliste
-              Nantais, pour le compte du quel je gérais une data-base sous format Excel.
-            </p>
-            <p class="fw-light">
-              - En 2021, j'ai travaillé au sein de la MGEN en tant qu'opérateur de saisie, je réalisais des liquidations
-              manuelles pour une aide auditive.
-            </p>
-          </div>
+        <div class="pt-4">
+          <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-github"
+            viewBox="0 0 16 16" style="width: 30px;height: 30px;padding-left: 4px;margin-right:15px;float: left;">
+            <path
+              d="M8 0C3.58 0 0 3.58 0 8c0 3.54 2.29 6.53 5.47 7.59.4.07.55-.17.55-.38 0-.19-.01-.82-.01-1.49-2.01.37-2.53-.49-2.69-.94-.09-.23-.48-.94-.82-1.13-.28-.15-.68-.52-.01-.53.63-.01 1.08.58 1.23.82.72 1.21 1.87.87 2.33.66.07-.52.28-.87.51-1.07-1.78-.2-3.64-.89-3.64-3.95 0-.87.31-1.59.82-2.15-.08-.2-.36-1.02.08-2.12 0 0 .67-.21 2.2.82.64-.18 1.32-.27 2-.27.68 0 1.36.09 2 .27 1.53-1.04 2.2-.82 2.2-.82.44 1.1.16 1.92.08 2.12.51.56.82 1.27.82 2.15 0 3.07-1.87 3.75-3.65 3.95.29.25.54.73.54 1.48 0 1.07-.01 1.93-.01 2.2 0 .21.15.46.55.38A8.012 8.012 0 0 0 16 8c0-4.42-3.58-8-8-8z" />
+          </svg>
+          <a target="_blank" href="https://github.com/rafael-longeville/bootstrap-v5">Lien vers le repo GitHub</a>
+          <br>
+          <BR>
+          <p>Au cours de la réalisation de ce projet, j'ai pu apprendre des concepts HTML avancés, ainsi que
+            l'organisation et les diverses fonctionalités d'outils tels que :</p>
+          <ul>
+            <li>Bootstrap v5</li>
+            <br>
+            <li>Préprocesseur Sass</li>
+            <br>
+            <li>Git</li>
+          </ul>
+          <img src="./images/sass-css-git.jpg" alt="sass">
         </div>
       </div>
+
+
+      <br><br>
+
     </div>
   </section>
   <br>
@@ -162,6 +171,7 @@
               <i class="icon-attachment"></i>
               <img src="./images/react-svg.svg" width="50px" height="50px">
               <h4>Stage de 2 semaines dans une start-up Bordelaise</h4>
+
               <ul>
                 <li>Découverte du Framework React.JS et de Node.JS</li>
                 <li>Découverte de la méthode Agile / SCRUM</li>
@@ -378,8 +388,8 @@
             <div class="card-body">
               <h5 class="card-title">Mon CV</h5>
               <p class="card-text">Regardez mes compétences et n'hésitez pas à m'ajouter sur <a
-                  href="https://www.linkedin.com/in/rafael-longeville/" target="_blank">LinkedIn</a> pour un devis
-                personalisé</p>
+                  href="https://www.linkedin.com/in/rafael-longeville/" target="_blank">LinkedIn</a> pour rentrer en
+                contact avec moi</p>
               <a href="/images/Rafael longeville (1).pdf" class="btn btn-primary" target="_blank">Visualisez mon CV en
                 PDF
               </a>
